[package]
name = "peak-vista-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }
glam = "0.27"

[dependencies.image]
version = "0.24"
default-features = false
features = ["png"]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
